# rent_adu

./: .gitignore  Dockerfile  README.md  apartments.py  craigslist.py  main.py  notes.md  pyproject.toml  requirements.txt
scrapers/: apartments.py  craigslist.py
src/: craigslist.py  credentials-example.py  main.py
