[tool.poetry]
name = "rent_adu"
version = "0.1.0"
description = ""
authors = ["buchmayne <michaelmbuchman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
beautifulsoup4 = "^4.9.3"
requests = "^2.24.0"
pandas = "^1.1.3"
flake8 = "^3.8.4"
psycopg2-binary = "^2.8.6"
SQLAlchemy = "^1.3.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
