[tool.poetry]
name = "rent_adu"
version = "0.1.0"
description = ""
authors = ["buchmayne <michaelmbuchman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.24.0"
pandas = "^1.1.3"
psycopg2-binary = "^2.8.6"
SQLAlchemy = "^1.3.20"
SQLAlchemy-Utils = "^0.36.8"
boto3 = "^1.16.10"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
